--- a/Areas/NorthPole/Views/FlightBookings/Index.cshtml
+++ b/Areas/NorthPole/Views/FlightBookings/Index.cshtml
@@ -5,10 +5,10 @@
 }
 
 
-
-<table class="table">
+<div class="table-wrap">
+    <table class="search-table w-100">
     <thead>
-        <tr>
+            <tr class="text-center">
             <th>
                 Flight
             </th>
@@ -35,7 +35,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+                <tr class="text-center">
                 <td>
                     @Html.DisplayFor(modelItem => item.Flight.Airline)
                 </td>
@@ -60,6 +60,7 @@
         }
     </tbody>
 </table>
+</div>
 
 <p>
     <a class="bttn button-one" asp-action="Create" asp-route-flightId="@ViewData["FlightId"]">Create a Flight Booking!</a>
