--- a/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -7,7 +7,7 @@
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
-<h3 class="text-center">@ViewData["Title"]</h3>\
+<h3 class="text-center">@ViewData["Title"]</h3>
 <div class="d-flex flex-column  justify-content-center align-content-center">
 @{
     var consentFeature = HttpContext.Features.Get<ITrackingConsentFeature>();
