--- a/Areas/NorthPole/Views/AdminViews/Index.cshtml
+++ b/Areas/NorthPole/Views/AdminViews/Index.cshtml
@@ -12,7 +12,7 @@
 		</div >
 		<div class="d-flex flex-column" >
 			<img src="~/img//Airplane.png" style="width:300px; height:auto;"/>
-			<a asp-controller="Flights" asp-action="Search" class="bttn button-one mt-1">View Posted Flights</a>
+			<a asp-controller="Flights" asp-action="SearchFlight" class="bttn button-one mt-1">View Posted Flights</a>
 		</div>
 	</div>
 }
