Fixed Go Back Button Bugs on Index Views

--- a/Areas/NorthPole/Views/Cars/Search.cshtml
+++ b/Areas/NorthPole/Views/Cars/Search.cshtml
@@ -69,5 +69,6 @@
             <p>
                 <a asp-area="" class="bttn button-one mt-3 w-250" asp-action="Create">List another car!</a>
         </p>}
+        <a href='javascript:history.go(-1)' class="bttn button-three w-250 mt-2">Back to List</a>
     </body>
 </html>
