--- a/Areas/NorthPole/Views/Hotels/Search.cshtml
+++ b/Areas/NorthPole/Views/Hotels/Search.cshtml
@@ -70,8 +70,13 @@
             }
         }
         </div>
-        <p>
-            <a class="bttn button-one mt-3 w-250" asp-area="" asp-action="Create">Add Hotel</a>
-        </p>
+        @if (User.IsInRole("Admin"))
+        {
+
+
+            <p>
+                <a class="bttn button-one mt-3 w-250" asp-area="" asp-action="Create">Add Hotel</a>
+        </p>}
+        <a href='javascript:history.go(-1)' class="bttn button-three w-250 mt-2">Back to List</a>
     </body>
 </html>
