--- a/Areas/NorthPole/Views/HotelReviews/Create.cshtml
+++ b/Areas/NorthPole/Views/HotelReviews/Create.cshtml
@@ -15,7 +15,7 @@
         <div class="d-flex flex-column">
             <label asp-for="Rating" class="control-label mt-3"></label>
             <input asp-for="Rating" type="range" id="rating" name="rating" min="0" max="10" onchange="updateSliderValue()" />
-            <span id="sliderValue" class="ml-2">-/10</span>
+            <span id="sliderValue" class="ml-2">5/10</span>
             <span asp-validation-for="Rating" class="text-danger"></span>
         </div>
         <div class="d-flex flex-column">
